template/nginx-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-${FEATURE_NAME}
  namespace: avi-feature
  labels:
    feature: ${FEATURE_NAME} 
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp
  selector:
    feature: ${FEATURE_NAME}
