template/nginx-web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-${FEATURE_NAME}
  namespace: avi-feature
  labels:
    feature: ${FEATURE_NAME}   
  annotations:
    avi_proxy: '{"virtualservice":{"enable_rhi": true, "east_west_placement": false}}'
spec:
  rules:
  - host: ${FEATURE_NAME}.demo.corp.local
    http:
      paths:
      - path: "/"
        backend:
          serviceName: nginx-${FEATURE_NAME}
          servicePort: 80
